# ai-data-broker-remover

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
app/: pyproject.toml
app/brokers/: .env.example  demo_agents.py  pyproject.toml
app/brokers/prompts/: data_broker_agent_spec.md  prompt.md  vibe.example.md
app/brokers/prompts/claude/: crewai-ollama-solution.md  local-agent-options.md  prompt.md  setup-files.md  setup.md
app/brokers/prompts/gemini-cli/: .gitignore  recommendations.md  vibe.example.md
app/brokers/resources/: brokers.txt
app/brokers/src/: data_source.py  db_source.py  file_source.py  in_mem_source.py  main.py
app/brokers/src/broker/: db_source.py  file_source.py  in_mem_source.py  math_utils.py
app/brokers/src/broker/agents/: __init__.py  base.py  classification.py  coordination.py  crawling.py  deduplication.py  discovery.py  monitoring.py
app/brokers/tests/: test_agent_functionality.py  test_agents.py  test_brokers.py  test_self_organizing_prompt.py
app/dashboard/: pyproject.toml
app/dashboard/src/: main.py
app/remover/: pyproject.toml
app/remover/src/: main.py
app/reports/: pyproject.toml
app/reports/src/: main.py
app/scanner/: pyproject.toml
app/scanner/src/: __init__.py  cli.py  main.py
app/scanner/src/brokers/: __init__.py  peoplefinder.py  spokeo.py  whitepages.py
app/scanner/src/core/: __init__.py  base.py  manager.py
app/scanner/tests/: __init__.py  test_brokers.py
docs/: broker_types.md  project-structure.md
docs/brokers/: Aura.md  AvastBreachGuard.md  BrandYourself.md  Confidently.md  DataSeal.md  DeleteMe.md  DeleteMyInfo.md  EasyOptOuts.md  EraseMe.md  GuaranteedRemovals.md  HelloPrivacy.md  IDX.md  Incogni.md  Kanary.md  Malwarebytes.md  McAfeeCleanup.md  MyDataRemoval.md  Onerep.md  Optery.md  PrivacyBee.md  PrivacyHawk.md  PrivacyPros.md  PurePrivacy.md  ReputationDefender.md  Voiply.md
examples/: demo.py
